public/scss/style.scss
@import 'include-media';
$breakpoints: (
    phone: 320px,
    tablet: 800px,
    desktop: 1024px
);

$primary-color: #333;

// Breakpoint between mobile and desktop layout
$break-small: 480px;
$break-medium: 600px;
$makerspace-orange: #FF8B37;

html,
body {
    height: 100%;
}

.uk-button {
    border-radius: 2px;
}

.uk-button-group {
    .uk-button {
        border-radius: 0px;

        &:first-child {
            border-top-left-radius: 2px;
            border-bottom-left-radius: 2px;
        }

        &:last-child {
            border-top-right-radius: 2px;
            border-bottom-right-radius: 2px;
        }
    }
}

#root {
    // position: absolute;
    width: 100%;
    // left: 0px;
    // right: 0px;
    display: flex;
    flex-direction: row;
    min-height: 100%;

    @include media("<=tablet") {
        flex-direction: column;
    }

    color: $primary-color;
    justify-content: center;
}

#left-sidebar {
    flex: 0 0 auto;
    padding: 10px;

    @include media(">tablet") {
        width: 250px;

        // Designed using: https://shadows.brumm.af/
        box-shadow:
            0px 0.1px 0.3px rgba(0, 0, 0, 0.034),
            0px 0.3px 0.7px rgba(0, 0, 0, 0.048),
            0px 0.5px 1.3px rgba(0, 0, 0, 0.06),
            0px 0.9px 2.2px rgba(0, 0, 0, 0.072),
            0px 1.7px 4.2px rgba(0, 0, 0, 0.086),
            0px 4px 10px rgba(0, 0, 0, 0.12);

        .sidebar-fixed-content {
            width: 250px - 5px;
            position: fixed;
            top: 0px;
            bottom: 0px;
        }
    }

    @include media("<=tablet") {

        .sidebar-fixed-content {
            width: 100%;
            text-align: center;

            img {
                width: 50%;
                max-width: 250px;
            }
        }

        li a {
            justify-content: center;
        }
    }

    // Required for the delete button to be placed on the same row as the category
    li a {
        display: inline-block;
    }

    .uk-nav-default {
        margin-top: 20px;
    }

    .sidebar-buy-btn {
        margin-top: 40px;
        width: 100%;
        opacity: 1;
        transition: opacity 200ms;

        a {
            color: #FFF;
        }
    }

    li.active>a {
        color: #444;
    }

    li a {
        .uk-icon {
            margin-right: 10px;
        }

        display: flex;
        flex-direction: row;
        align-items: center;
    }

    .sidebar-buy-btn.cart-empty {
        opacity: 0.5;
    }

    @include media("<=tablet") {
        .sidebar-buy-btn {
            display: block;
            position: fixed;
            bottom: 0px;
            left: 0px;
            z-index: 2;
            border-radius: 0px;
        }

        .sidebar-buy-btn.cart-empty {
            display: none;
        }
    }
}

.product.active {
    background: #bfddfc;
}

.product-list {
    list-style: none;
    padding-left: 10px;
    width: 100%;

    h3 {
        margin-bottom: 0px;
        margin-top: 20px;
    }
}

.product-container-list {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
}

.layout-grid {
    .product-container {
        width: 230px;
        margin: 10px;
        flex-direction: column;
    }

    .product-image-container {
        width: 100%;
        height: 230px;
    }

    .product {
        flex: 1 0 auto;

        .product-input {
            flex: 0 0 auto;
        }
    }
}

.layout-list {
    .product-image-container {
        width: 50px;
        height: auto;

        img {
            top: 0;
        }
    }

    .product {
        margin-left: 6px;
    }
}

.layout-table {
    .product-image-container {
        width: 0;
        height: 0;
        visibility: hidden;
    }

    .product {
        flex-direction: row;

        .product-line {
            width: auto;
        }

        .product-input {
            flex: 0 0 auto;
            margin-left: 6px;
        }
    }
}

.product-container {
    width: 100%;
    margin: 0;
    display: flex;
    flex-direction: row;
    align-items: stretch;
}

.product-image-container {
    display: inline-block;
    position: relative;
    width: 100%;
    height: 240px;

    img {
        display: block;
        margin: auto;
        max-height: 100%;
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
    }
}
/* ... */

